--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "vi": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview"
   },
