--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^1.0.0-beta.3",
     "element-plus": "^2.2.17",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5"
