--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@formkit/auto-animate": "^1.0.0-beta.3",
     "element-plus": "^2.2.17",
+    "pinia": "^2.0.32",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5"
   },
