--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
     "@formkit/auto-animate": "^1.0.0-beta.3",
     "element-plus": "^2.2.17",
     "pinia": "^2.0.32",
