--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@formkit/auto-animate": "^1.0.0-beta.3",
     "element-plus": "^2.2.17",
     "pinia": "^2.0.32",
+    "tw-elements": "^1.0.0-beta2",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5"
   },
