--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "cd dist && cp index.html 404.html"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
