--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "deploy": "cd dist && cp index.html 404.html"
+    "deploy": "cd dist && copy index.html 404.html"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
