--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "pinia": "^2.0.32",
     "tw-elements": "^1.0.0-beta2",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vuetify": "^3.5.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.37.0",
