--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vuetify": "^3.5.1"
   },
   "devDependencies": {
+    "@mdi/js": "^7.4.47",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
     "@vitejs/plugin-vue": "^3.1.0",
