--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pinia": "^2.0.32",
     "tw-elements": "^1.0.0-beta2",
     "vue": "^3.2.37",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.1.5",
     "vuetify": "^3.5.1"
   },
