--- a/package.json
+++ b/package.json
@@ -11,14 +11,13 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
-    "@formkit/auto-animate": "^1.0.0-beta.3",
+    "@formkit/auto-animate": "^0.8.2",
     "clean": "^4.0.2",
     "daisyui": "^4.6.1",
     "element-plus": "^2.2.17",
     "pinia": "^2.0.32",
     "tw-elements": "^1.0.0-beta2",
     "vue": "^3.2.37",
-    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.1.5",
     "vuetify": "^3.5.1"
   },
