--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "@formkit/auto-animate": "^0.8.2",
+    "animejs": "^3.2.2",
     "clean": "^4.0.2",
     "daisyui": "^4.6.1",
     "element-plus": "^2.2.17",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@mdi/js": "^7.4.47",
+    "@types/animejs": "^3.1.12",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
