--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "deploy": "cd dist && copy index.html 404.html"
   },
@@ -41,7 +41,7 @@
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
-    "vite": "^3.1.0",
+    "vite": "^6.0.5",
     "vite-plugin-eslint": "^1.8.1",
     "vue-eslint-parser": "^9.1.0",
     "vue-tsc": "^0.40.4"
